fix(application-graph): keep the process alive for the whole application (#807)
* fix(grpc-server): keep the process alive while the server is running

An application whose only server is gRPC started and exited immediately: the
container stopped with code 0 -- a clean JVM exit, not a startup failure -- and
every test against it failed with UNAVAILABLE / Connection refused. This
affected four kora-examples modules across both languages.

KoraApplication.run does not block; it initializes the graph, registers a
shutdown hook and returns, so the process lives exactly as long as some
component keeps a non-daemon thread. Since 2.0 the gRPC transport is
OkHttpServerBuilder with directExecutor() and VirtualThreadExecutorTransportFilter,
and virtual threads are always daemon, so nothing was left holding the JVM.
GrpcServer.init() called server.start() and returned; awaitTermination() was
only reached from release().

This is not a new contract: XnioLifecycle already starts a dedicated non-daemon
thread for exactly this reason, and says so in a comment. The gRPC server
simply stopped honouring it when the transport changed. GrpcServer now starts a
non-daemon thread that awaits termination, and release() interrupts it after
the shutdown sequence so it cannot outlive a shutdownNow() and wedge the JVM.

GrpcServerProcessLifetimeTest starts a real server on port 0 and asserts a live
non-daemon thread exists while it runs and is gone after release(). Without the
fix it fails on the first assertion.

The broader design question -- whether application lifetime should be an
explicit contract in KoraApplication.run rather than a property of whichever
transport a component happens to use -- is left open; this change does not
preclude it.

* fix(application-graph): keep the process alive for the whole application

An initialized application exits with code 0 right after start unless something
holds the JVM. Kora runs on virtual threads and those are always daemon, so
nothing does by d